--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,5 +1,15 @@
 FROM node:18-alpine AS build
 WORKDIR /app
+
+# Build-time environment variables
+ARG VITE_API_URL
+ARG VITE_WS_URL
+ARG VITE_MAPBOX_ACCESS_TOKEN
+
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_WS_URL=$VITE_WS_URL
+ENV VITE_MAPBOX_ACCESS_TOKEN=$VITE_MAPBOX_ACCESS_TOKEN
+
 COPY package*.json ./
 RUN npm install
 COPY . .
