--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@deck.gl/core": "^9.1.0",
     "@deck.gl/layers": "^9.1.0",
     "@deck.gl/mapbox": "^9.1.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.14.2",
     "axios": "^1.6.2",
