--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -126,7 +126,7 @@ services:
     environment:
       VITE_API_URL: http://localhost:3001
       VITE_WS_URL: ws://localhost:3001
-      VITE_MAPBOX_TOKEN: your-mapbox-token-here
+      VITE_MAPBOX_ACCESS_TOKEN: ${VITE_MAPBOX_ACCESS_TOKEN:-your-mapbox-token-here}
     ports:
       - "3000:3000"
     volumes:
