--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -116,6 +116,10 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile.prod
+      args:
+        VITE_API_URL: ${VITE_API_URL:-https://your-domain.com}
+        VITE_WS_URL: ${VITE_WS_URL:-wss://your-domain.com}
+        VITE_MAPBOX_ACCESS_TOKEN: ${VITE_MAPBOX_ACCESS_TOKEN:?VITE_MAPBOX_ACCESS_TOKEN must be set}
     ports:
       - "80:80"
     depends_on:
